--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  box-sizing: border-box;
+}
+
+.underline-hover {
+  /* text-decoration: none;
+  background-image: linear-gradient(currentColor, currentColor);
+  background-position: 0% 100%;
+  background-repeat: no-repeat;
+  background-size: 0% 2px;
+  transition: background-size 0.3s; */
+
+  position: relative;
+  display: inline;
+  text-decoration: none;
+  background: linear-gradient(#000, #000) left bottom no-repeat;
+  background-size: 0% 2px;
+  transition: background-size 0.5s;
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
+}
+
+.underline-hover:hover {
+  background-size: 100% 2px;
+}
