--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,8 +7,8 @@
     @apply box-border;
   }
 
-  /**
-   * Prevent the page to scroll when the user is interacting with the UI.
+  /*
+   * Smooth scroll essentials
    */
   html.lenis,
   html.lenis body {
@@ -27,7 +27,9 @@
     pointer-events: none;
   }
 
-  /* Only necessary with horizontal scrolling */
+  /* 
+   * Only necessary with horizontal scrolling 
+   */
   html[data-scroll-orientation="horizontal"] {
     body {
       width: fit-content;
@@ -35,5 +37,21 @@
     [data-scroll-container] {
       display: flex;
     }
+  }
+
+  /* 
+   * Prevent default scrollbar 
+   */
+  html,
+  body {
+    width: 100%;
+    min-height: 100%;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    overflow: -moz-scrollbars-none;
+  }
+  html::-webkit-scrollbar,
+  body::-webkit-scrollbar {
+    display: none;
   }
 }
